Cards and Footer

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/style.css" />
+    <!-- Fonts Icons -->
+    <script
+      src="https://kit.fontawesome.com/32df0df30a.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <div class="Wrapper">
@@ -23,7 +28,7 @@
           <h1 class="Title">Revista Cuatrimestral</h1>
         </header>
         <main class="Main">
-          <h3 class="Subtitle">Indices</h3>
+          <h3 class="Subtitle">Indices:</h3>
           <ul class="List">
             <li class="List__item">
               <a href="./revista/primera-edicion.pdf" class="List__link">
@@ -32,7 +37,23 @@
                   alt="Primera Edicion"
                   class="List__img"
                 />
-                <p class="Link__text">Primera Versión</p>
+                <span class="Link__text">I Edición - Agosto 2020</span>
+              </a>
+            </li>
+            <li class="List__item">
+              <a href="#" class="List__link">
+                <img
+                  src="img/coming-soon.jpg"
+                  alt="Muy Pronto"
+                  class="List__img"
+                />
+                <span class="Link__text">II Edición - Diciembre 2020</span>
+              </a>
+            </li>
+            <li class="List__item">
+              <a href="#" class="List__link">
+                <img src="img/coming-soon.jpg" alt="" class="List__img" />
+                <span class="Link__text">III Edición - Abril 2021</span>
               </a>
             </li>
           </ul>
@@ -47,7 +68,7 @@
             />
             <p class="Logo__caption">Un proyecto <b>Protoplast</b></p>
           </article>
-          <article class="Footer__item">
+          <!-- <article class="Footer__item">
             <h5 class="Footer__title">Síguenos:</h5>
             <div class="Footer__social">
               <a
@@ -68,12 +89,12 @@
                 <i class="fa fa-envelope Footer__social__icon"></i>
               </a>
             </div>
-          </article>
+          </article> -->
           <article class="Footer__item">
             <h5 class="Footer__title">Contáctanos:</h5>
             <div class="Footer__links">
-              <a href="mailto:info@talamoo.com" class="Footer__email"
-                >info@talamoo.com
+              <a href="mailto:info@aulamovie.com" class="Footer__email"
+                >info@aulamovie.com
               </a>
               <a
                 href="https://wa.link/ca5x8s"
