--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <h3 class="Subtitle">Indices:</h3>
           <ul class="List">
             <li class="List__item">
-              <a href="./revista/primera-edicion.pdf" class="List__link">
+              <a href="./2020/primera-edicion.pdf" class="List__link">
                 <img
                   src="img/encuentro-interuniversitario-SNN.jpg"
                   alt="Primera Edicion"
