--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                   alt="Primera Edicion"
                   class="List__img"
                 />
-                <span class="Link__text">I Número - Agosto 2020</span>
+                <span class="Link__text">I Número - Septiembre 2020</span>
               </a>
             </li>
             <li class="List__item">
@@ -47,13 +47,13 @@
                   alt="Muy Pronto"
                   class="List__img"
                 />
-                <span class="Link__text">II Número - Diciembre 2020</span>
+                <span class="Link__text">II Número - Enero 2020</span>
               </a>
             </li>
             <li class="List__item">
               <a href="#" class="List__link">
                 <img src="img/coming-soon.jpg" alt="" class="List__img" />
-                <span class="Link__text">III Número - Abril 2021</span>
+                <span class="Link__text">III Número - Mayo 2021</span>
               </a>
             </li>
           </ul>
