--- a/index.html
+++ b/index.html
@@ -31,7 +31,11 @@
           <h3 class="Subtitle">Indices:</h3>
           <ul class="List">
             <li class="List__item">
-              <a href="./2020/primera-edicion.pdf" class="List__link">
+              <a
+                href="./2020/Series-Investigativas-aulamovie-numero-1.pdf"
+                class="List__link"
+                title="Revista Número I"
+              >
                 <img
                   src="img/encuentro-interuniversitario-SNN.jpg"
                   alt="Primera Edicion"
